--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -29,6 +29,12 @@
             app:tabTextColor="@color/white">
 
             <android.support.design.widget.TabItem
+                android:id="@+id/allTab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="All" />
+
+            <android.support.design.widget.TabItem
                 android:id="@+id/inProgressTab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
