--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="notification_large_dim">50dp</dimen>
+    <dimen name="fab_bigger_margin">64dp</dimen>
 </resources>
