--- a/app/src/main/res/layout/activity_displayfamily.xml
+++ b/app/src/main/res/layout/activity_displayfamily.xml
@@ -4,24 +4,31 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="8dp"
+    android:paddingTop="8dp"
+    android:paddingRight="8dp"
+    android:paddingBottom="8dp"
     tools:context="displayfamily">
 
 
-
-
     <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/rview"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
-
-
-    </android.support.v7.widget.RecyclerView>
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="227dp"
+        android:layout_height="258dp"
+        android:layout_alignStart="@+id/rview"
+        android:layout_alignEnd="@+id/rview"
+        android:layout_alignBottom="@+id/rview"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="93dp"
+        android:layout_marginTop="233dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="240dp" />
 
 
 </RelativeLayout>
