--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -43,7 +43,7 @@
                     android:layout_marginRight="14dp"
                     android:layout_weight="1"
                     android:contentDescription="TODO"
-                    app:srcCompat="@drawable/ic_menu_gallery" />
+                    app:srcCompat="@drawable/realtime" />
 
                 <EditText
                     android:id="@+id/nameEditText"
@@ -76,7 +76,7 @@
                     android:layout_marginEnd="14dp"
                     android:layout_marginRight="14dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_menu_gallery" />
+                    app:srcCompat="@drawable/categories"/>
 
                 <EditText
                     android:id="@+id/categoryEditText"
@@ -114,7 +114,7 @@
                     android:layout_marginEnd="14dp"
                     android:layout_marginRight="14dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_menu_camera" />
+                    app:srcCompat="@drawable/schedule" />
 
                 <EditText
                     android:id="@+id/dateEditText"
@@ -153,7 +153,7 @@
                     android:layout_marginEnd="14dp"
                     android:layout_marginRight="14dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_menu_camera" />
+                    app:srcCompat="@drawable/sand_timer" />
 
                 <EditText
                     android:id="@+id/timeEditText"
@@ -221,10 +221,6 @@
                 android:paddingTop="0dp"
                 android:text="Share to Facebook"
                 android:textColor="@android:color/white" />
-
-
-
-
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
