--- a/app/src/main/res/layout/row_task_item.xml
+++ b/app/src/main/res/layout/row_task_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
@@ -19,41 +20,62 @@
             android:padding="4dp">
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="50dip"
+                    android:layout_height="fill_parent"
+                    android:src="@drawable/medi"
+                    android:layout_marginLeft="3dip"
+                    android:layout_marginTop="3dip"
+                    android:layout_marginBottom="3dip"
+                    android:scaleType="center"/> />
 
-            <TextView
-                android:id="@+id/task_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/person_photo"
-                android:textSize="30sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/task_category"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/task_name"
-                android:layout_toRightOf="@+id/person_photo" />
+                    <TextView
+                        android:id="@+id/row_task_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginLeft="8dip"
+                        android:layout_toEndOf="@+id/person_photo"
+                        android:fontFamily="@font/rye"
+                        android:textSize="30sp" />
 
-            <TextView
-                android:id="@+id/task_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/task_category"
-                android:layout_toRightOf="@+id/person_photo" />
+                    <TextView
+                        android:id="@+id/row_task_category"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/row_task_name"
+                        android:layout_marginLeft="8dip"
+                        android:layout_toRightOf="@+id/person_photo"
+                        android:fontFamily="@font/faster_one" />
 
-            <TextView
-                android:id="@+id/task_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/task_date"
-                android:layout_toRightOf="@+id/person_photo" />
-            <TextView
-                android:id="@+id/task_user"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/task_time"
-                android:layout_toRightOf="@+id/person_photo" />
+                    <TextView
+                        android:id="@+id/row_task_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dip"
+                        android:layout_below="@+id/row_task_category"
+                        android:layout_toRightOf="@+id/person_photo" />
+
+                    <TextView
+                        android:id="@+id/row_task_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dip"
+                        android:layout_below="@+id/row_task_date"
+                        android:layout_toRightOf="@+id/person_photo" />
+                </LinearLayout>
+            </LinearLayout>
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
