--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="icons">#ffffff</color>
     <color name="primary_text">#212121</color>
+    <color name="Pink">#dc4172</color>
 </resources>
